[package]
name = "ustr-fxhash"
version = "1.0.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>", "Boshen"]
edition = "2021"
license = "BSD-2-Clause-Patent"
description = "Fast, FFI-friendly string interning."
documentation = "https://docs.rs/ustr-fxhash"
repository = "https://github.com/Boshen/ustr-fxhash"
readme = "README.md"
keywords = ["string", "interning", "FFI"]
categories = ["caching", "data-structures"]

[dependencies]
fxhash = "0.2.1"
byteorder = "1.4.3"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.4.0"
crossbeam-channel = "0.5.0"
crossbeam-utils = "0.8.1"
libc = "0.2.62"
serde_json = "1.0"
string-interner = "0.13.0"
string_cache = "0.8.1"

[[bench]]
name = "creation"
harness = false
